<resources>
    <string name="app_name">TapTrack</string>
    <string name="field_login">Логин</string>
    <string name="field_is_empty">Заполните поле</string>
    <string name="field_email">Email</string>
    <string name="field_username">Имя</string>
    <string name="field_tel">Телефон(опционально)</string>
    <string name="field_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_create_account">Зарегистрироваться</string>
    <string name="main">Главная</string>
    <string name="basket">Покупки</string>
    <string name="favorites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="places">Места</string>
    <string name="profile">Профиль</string>
    <string name="home_page">Главаня</string>
    <string name="title_slider_beer">Пиво</string>
    <string name="title_slider_brewery">Пивоварни</string>
    <string name="title_slider_store">Продается</string>
    <string name="slider_show_all">Показать все</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="profile_user_location">Location</string>
    <string name="load_error">Ошибка загрузки</string>
    <string name="try_again">Попытаться снова</string>
    <string name="place_list">Список</string>
    <string name="place_map">Карта</string>
    <string name="connection_error">Невозможно подключиться к серверу</string>
    <string name="auth_error">Сессия пользователя завершена</string>
    <string name="internal_error">Внутення ошибка. Попробуйте снова!</string>
    <string name="action_logout">Выход</string>
    <string name="action_try_again">Попробуйте снова</string>
    <string name="close">Закрыть</string>
    <string name="beer_title">Название</string>
    <string name="beer_description_adblock">Описание позиции</string>
    <string name="sign_up_success">Поздравляю! Вы создали аккаунт. Теперь вы можете войти</string>
    <string name="account_already_exists">Такой аккаунт уже существует!</string>
    <string name="password_mismatch">Введеный пароль не совпадает</string>
    <string name="show_on_map">Смотреть на карте</string>
    <string name="city">Город</string>
    <string name="magazine">Магазин</string>
    <string name="type_of_brewery">Тип пивоварни</string>
    <string name="create_feedback">Оставить отзыв</string>
    <string name="rating">4,9</string>
    <string name="total_average">7446</string>
    <string name="total_average_text">отзывов</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="edit_name">Редактировать имя</string>
    <string name="edit_email">Редактировать почту</string>
    <string name="edit_phone">Редактировать телефон</string>
    <string name="edit_birthday">Редактировать день рождения</string>
    <string name="edit_country">Редактировать страну</string>
    <string name="edit_city">Редактировать город</string>
    <string name="save_edition">Сохранить</string>
    <string name="stile">стиль</string>
    <string name="tel">Телефон</string>
    <string name="email">Почта</string>
    <string name="date">Дата</string>
    <string name="username">Имя пользователя</string>
    <string name="brewery">Пивоварня</string>
    <string name="rate">Оценить</string>
    <string name="leaveFeedback">Оставить отзыв</string>
    <string name="add_a_comment">Добавьте комментарий</string>
    <string name="feedback_published">Отзыв размещен!</string>
    <string name="my_reviews">Мои отзывы</string>
    <string name="friends">Друзья</string>
    <string name="actions">Действия</string>
    <string name="news">Новости</string>
    <string name="beer">Пиво</string>
    <string name="my_feedbacks">Мои отызвы</string>
    <string name="More">Подробнее</string>
</resources>