<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app2:cardBackgroundColor="#B8BC6C"
        app2:cardCornerRadius="4dp"
        app2:cardElevation="4dp"
        app2:cardPreventCornerOverlap="false"
        app2:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageViewPlace"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textViewPlaceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/imageViewPlace"
                android:text="@string/beer_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPlaceDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPlaceTitle"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imageViewPlace"
                android:ellipsize="end"
                android:lines="2"
                android:text="@string/beer_description_adblock" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/textViewPlaceMagazine"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

            <TextView
                android:id="@+id/textViewPlaceMagazine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/magazine"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewPlaceCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPlaceDesc"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/imageViewPlace"
                android:text="@string/city" />

            <TextView
                android:id="@+id/textViewShowPlaceOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPlaceDesc"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="8dp"
                android:text="@string/show_on_map" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>