<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:clipToPadding="false"
    android:clipChildren="false">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app2:cardBackgroundColor="#2753C1"
        app2:cardCornerRadius="4dp"
        app2:cardElevation="4dp"
        app2:cardPreventCornerOverlap="true"
        app2:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_brewery_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_brewery_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/iv_brewery_image"
                android:ellipsize="end"
                android:lines="2"
                android:text="@string/beer_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_brewery_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/type_of_brewery" />

            <TextView
                android:id="@+id/tv_brewery_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_brewery_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_toEndOf="@id/iv_brewery_image"
                android:ellipsize="end"
                android:lines="2"
                android:text="@string/beer_description_adblock" />

            <TextView
                android:id="@+id/tv_Brewery_City"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_brewery_description"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:text="@string/city" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>