<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewPlace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewPlaceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="default title"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlace"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPlaceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:text="default address"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlace"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlaceTitle" />

    <TextView
        android:id="@+id/textViewPlaceDesc"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:lines="2"
        android:text="default description"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlace"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlaceAddress" />

    <TextView
        android:id="@+id/textViewPlaceCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        app:layout_constraintStart_toStartOf="@+id/textViewPlaceDesc"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlaceDesc" />

    <TextView
        android:id="@+id/textViewPlaceMagazine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magazine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewPlaceMagazine"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

    <TextView
        android:id="@+id/textViewShowPlaceOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_on_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>